# Wasm-Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  KGE  MakeComponents.lua  Makefile  README.md  build.sh  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: Linalg.c.C6A7CC6CDE5D7E07.idx  Linalg.h.B69A59046246BF1E.idx  Test.c.64DCE570EADD2CB2.idx  Test.h.DE71FC53633A6CA8.idx  array.c.BC6EAF5EA2A92AEC.idx  array.h.6D34A95FA881E501.idx  array.h.74522403C80F7149.idx  klm.c.082CE10F9159833D.idx  klm.h.78A0D854F8F8D578.idx  llist.c.7A5C33CBF48942EC.idx  llist.h.664BDF18AAB11898.idx  llist.h.7C03278FCD4C3BB0.idx  main.c.F5EA44C8BD0137F9.idx
Collections/: CMakeLists.txt  Makefile  cmake_install.cmake
Collections/include/kc/: array.h  byte_array.h  llist.h  map.h  set.h
Collections/src/: array.c  array.cpp  byte_array.c  byte_array.cpp  llist.c  map.c  map.cpp  set.c  set.cpp
Math/: CMakeLists.txt  Makefile  cmake_install.cmake
Math/include/: klm.h
Math/src/: klm.c  klm.cpp
jslib/: lib.js
src/: Components.cpp  Components.h  Config.h  Entities.c  Entities.cpp  Entities.h  EntityManager.c  EntityManager.cpp  EntityManager.h  Init.c  Init.cpp  Init.h  InputSystem.cpp  InputSystem.h  KGE.hpp  RenderingSystem.c  RenderingSystem.cpp  RenderingSystem.h  Scene.c  Scene.cpp  Scene.h  main.c  main.cpp  tests.c  tests.cpp  tests.h
src/Components/: Sprite.csp  Transform.csp
wasm/: GL.js  index.html
